<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:src="@drawable/login"/>


    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_msg"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="27dp"/>

    <TextView
        android:id="@+id/head_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify2_msg"
        android:layout_gravity="center"
        android:layout_below="@id/header_title"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/head_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:inputType="number"
        android:padding="15dp"
        android:hint="@string/number_hint"
        android:background="@drawable/editext_background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/verifyNum_msg"
        android:textColor="@color/white"
        android:background="@drawable/button_backgrond"/>




</RelativeLayout>